--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Android_Conversion</string>
+    <string name="gradostype1">Kelvin</string>
+    <string name="gradostype2">Celcius</string>
+    <string name="gradostype3">Farenheit</string>
 </resources>
